[package]
name = "application"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
derive-new.workspace = true
enum_dispatch.workspace = true
smart-default.workspace = true
lazy_static.workspace = true
log.workspace = true
env_logger.workspace = true
dotenv.workspace = true

common_types = { path = "../common/types" }
common_events = { path = "../common/events" }
domain = { path = "../domain" }
in_memory_persistence = { path = "../in_memory_persistence" }
usecase = { path = "../usecase" }
rest = {path = "../rest"}
