[package]
name = "application"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
derive-new.workspace = true
enum_dispatch.workspace = true
smart-default.workspace = true
lazy_static.workspace = true
log.workspace = true
env_logger.workspace = true
dotenv.workspace = true

common_types.workspace = true
common_events.workspace = true
domain.workspace = true
in_memory_persistence.workspace = true
usecase.workspace = true
rest.workspace = true
