[package]
name = "application"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
derive-new.workspace = true
enum_dispatch.workspace = true
smart-default.workspace = true
lazy_static.workspace = true
log.workspace = true
env_logger.workspace = true
dotenvy.workspace = true
diesel.workspace = true
serde.workspace = true
lapin = "2.2.1"
async-trait = "0.1.68"
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio = "1.28.2"
futures-lite = "1.13.0"
async-global-executor = "2.3.1"




common_types.workspace = true
common_events.workspace = true
domain.workspace = true
in_memory_persistence.workspace = true
postgres_persistence.workspace = true
usecase.workspace = true
rest.workspace = true
