[package]
name = "domain"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive","rc","alloc"] }
serde_derive = "1.0.162"
erased-serde = "0.3.25"
serde_json = "1.0.96"
derive-new = "0.5.9"
thiserror = "1.0.40"
bigdecimal = { version = "0.3.0", features = ["serde"] }
mockall = "0.11.3"
fake = { version="2.5.0", features=["derive", "bigdecimal"] }
rand = "0.8.5"
rstest = "0.17.0"
derivative = "2.2.0"

common_types = { path = "../common/types" }
common_events = { path = "../common/events" }

[dev-dependencies]
