[package]
name = "in_memory_persistence"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new.workspace = true
serde.workspace = true
serde_derive.workspace = true
erased-serde.workspace = true
derivative.workspace = true
enum_dispatch.workspace = true
smart-default.workspace = true
time.workspace = true

common.workspace = true
domain.workspace = true
usecase.workspace = true

