[package]
name = "postgres_persistence"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new.workspace = true
derivative.workspace = true
diesel.workspace = true
serde.workspace = true
dotenvy.workspace = true
pg-embed = { version = "0.7", default-features = false, features = ["rt_tokio"] }
serial_test = "2.0.0"
tokio = "1.28.2"
bigdecimal.workspace = true

common_events.workspace = true
common_types.workspace = true
usecase.workspace = true
domain.workspace = true