[package]
name = "postgres_persistence"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new.workspace = true
derivative.workspace = true
diesel.workspace = true
serde.workspace = true
dotenvy.workspace = true
bigdecimal.workspace = true
diesel_logger.workspace = true
log.workspace = true
url.workspace = true
diesel_migrations.workspace = true
testcontainers.workspace = true
rstest.workspace = true

common_events.workspace = true
common_types.workspace = true
usecase.workspace = true
domain.workspace = true