[package]
name = "rest"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true, features = ["rustls"] }
actix-cors.workspace = true
derive-new.workspace = true
const_format.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
bigdecimal.workspace = true

domain = { path = "../domain" }
usecase = { path = "../usecase" }
common_types = { path = "../common/types" }
common_rest = { path = "../common/rest" }
in_memory_persistence = { path = "../in_memory_persistence" }
application = { path = "../application" }