[package]
name = "rest"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true, features = ["rustls"] }
derive-new.workspace = true
const_format.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
smart-default.workspace = true
bigdecimal.workspace = true
dotenvy.workspace = true
utoipa = {version = "4.1.0", features = ["actix_extras", "chrono"]}
utoipa-swagger-ui = { version = "5", features = ["actix-web"] }

domain.workspace = true
usecase.workspace = true
common.workspace = true