[package]
name = "telnet"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usecase.workspace = true
tokio.workspace = true
crossterm.workspace = true
prettytable-rs = "0.10.0"
actix-web.workspace = true
