[package]
name = "usecase"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
derive-new.workspace = true
structmap = "0.1.6"
structmap-derive = "0.1.6"
actix-web.workspace = true

domain = { path = "../domain" }
common_types = { path = "../common/types" }
common_events = { path = "../common/events" }