[package]
name = "usecase"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
derive-new.workspace = true
structmap.workspace = true
structmap-derive.workspace = true
actix-web.workspace = true

domain.workspace = true
common_types.workspace = true
common_events.workspace = true