[package]
name = "common_events"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new.workspace = true
time.workspace = true
serde.workspace = true
serde_derive.workspace = true
erased-serde.workspace = true

common_types.workspace = true