[package]
name = "common_rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
derive_more.workspace = true
serde.workspace = true
lazy_static.workspace = true
derive-new.workspace = true
