[package]
name = "types"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new.workspace = true
time.workspace = true
serde.workspace = true
serde_derive.workspace = true
derivative.workspace = true
enum_dispatch.workspace = true
smart-default.workspace = true
uuid.workspace = true
derive-getters.workspace = true

[dev-dependencies]
rstest.workspace = true
rand.workspace = true
fake.workspace = true

common = { path = "..", package = "rust_ddd_example_common" }