[package]
name = "types"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new.workspace = true
time.workspace = true
serde.workspace = true
serde_derive.workspace = true
derivative.workspace = true
enum_delegate.workspace = true
smart-default.workspace = true
uuid.workspace = true
derive-getters.workspace = true
tokio.workspace = true
async-trait.workspace = true

[dev-dependencies]
rand.workspace = true
rstest.workspace = true
fake.workspace = true
