[package]
name = "application"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
derive-new.workspace = true
enum_dispatch.workspace = true
smart-default.workspace = true
lazy_static.workspace = true
log.workspace = true
env_logger.workspace = true
dotenvy.workspace = true
serde.workspace = true
lapin.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
futures-lite.workspace = true
kafka.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
nectar.workspace = true
tokio-util.workspace = true
futures-util.workspace = true

common.workspace = true
domain.workspace = true
in_memory_persistence.workspace = true
postgres_persistence.workspace = true
usecase.workspace = true
rest.workspace = true
telnet.workspace = true

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
domain_test_fixtures.workspace = true
