[package]
name = "domain"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_derive.workspace = true
derive-new.workspace = true
bigdecimal.workspace = true
mockall.workspace = true
time.workspace = true
enum_dispatch.workspace = true
smart-default.workspace = true
uuid.workspace = true
derive_more.workspace = true
derive-getters.workspace = true

common.workspace = true

[dev-dependencies]
domain.workspace = true
fake.workspace = true
rand.workspace = true
rstest.workspace = true

[features]
domain = []