[package]
name = "domain"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_derive.workspace = true
derive-new.workspace = true
bigdecimal.workspace = true
time.workspace = true
enum_delegate.workspace = true
smart-default.workspace = true
uuid.workspace = true
derive_more.workspace = true
derive-getters.workspace = true
async-trait.workspace = true

common.workspace = true

fake = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rstest = { workspace = true, optional = true }
mockall = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
domain = { path = ".", features = ["testing"] }

[features]
testing = ["common/testing", "fake", "rand", "rstest", "mockall"]