[package]
name = "domain_test_fixtures"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
serde.workspace = true
derive-new.workspace = true
bigdecimal.workspace = true
fake.workspace = true
rand.workspace = true
time.workspace = true

domain.workspace = true
common.workspace = true
common_test_fixtures.workspace = true
