[package]
name = "in_memory_persistence"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new.workspace = true
derivative.workspace = true

common.workspace = true
domain.workspace = true
usecase.workspace = true

[dev-dependencies]
rand.workspace = true
fake.workspace = true
bigdecimal.workspace = true
serde.workspace = true
time.workspace = true

in_memory_persistence.workspace = true
