[package]
name = "in_memory_persistence"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new.workspace = true
derivative.workspace = true

common.workspace = true
domain.workspace = true
usecase.workspace = true
async-trait.workspace = true

[dev-dependencies]
in_memory_persistence = { path = ".", features = ["testing"] }
tokio.workspace = true

[features]
testing = ["common/testing", "domain/testing", "usecase/testing"]