[package]
name = "in_memory_persistence_test_fixtures"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
derive-new.workspace = true
common.workspace = true
domain.workspace = true
domain_test_fixtures.workspace = true
usecase_test_fixtures.workspace = true

[dev-dependencies]
