[package]
name = "postgres_persistence"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new.workspace = true
derivative.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
serde.workspace = true
dotenvy.workspace = true
bigdecimal.workspace = true

common.workspace = true
usecase.workspace = true
domain.workspace = true

[dev-dependencies]
postgres_persistence_test_fixtures.workspace = true
domain_test_fixtures.workspace = true
