[package]
name = "postgres_persistence_test_fixtures"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
derive-new.workspace = true
diesel.workspace = true
diesel_logger.workspace=true
log.workspace=true
url.workspace=true

common.workspace = true
domain.workspace = true
domain_test_fixtures.workspace=true
testcontainers.workspace = true
