[package]
name = "usecase"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new.workspace = true
actix-web.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
smart-default.workspace = true
serde.workspace = true

common.workspace = true
domain.workspace = true

rand.workspace = true
fake.workspace = true
bigdecimal.workspace = true
time.workspace = true

[dev-dependencies]
usecase = { path = ".", features = ["testing"] }

assert-panic.workspace = true
tracing-test.workspace = true

[features]
testing = ["common/testing", "domain/testing"]